# douyin-slice-optimizer

./: .gitignore  AGENTS.md  README.md  pyproject.toml
benchmarks/: README.md  dso-multimodal-vector-value-20260719-r1.baseline.json  dso-multimodal-vector-value-20260719-r1.json  dso-omni-propagation-account-holdout-20260720-r1-recovery1800.json  dso-omni-propagation-account-holdout-20260720-r1.json  dso-omni-propagation-account-holdout-result-20260720-r1.json  dso-omni-propagation-features-v2-20260719-r1.json  dso-qwen3-asr-recovery-20260718-r2.json  dso-qwen3-asr-subtitled-program-20260718-r1.json  dso-qwen3-asr-whisper-replacement-20260718-r1.json  dso-qwen35-omni-complete-clip-batch-20260719-r1.json  dso-qwen35-omni-complete-short-clip-shadow-20260719-r1.json  dso-qwen37-complete-short-clip-shadow-20260719-r1.json  dso-qwen37-full-clip-diagnostic-20260719-r1.json  dso-v1-beta-d10-ab-20260715-r1.json  dso-v1-beta-d10d-selector-blind6-20260717-r1.json  dso-v1-beta-d10d-selector-blind6-20260717-r2.json  dso-v1-cross-entry-20260718-r1.json  dso-v1-cross-entry-20260718-r2.json  dso-visible-engagement-omni-complete-clip-diagnostic-20260719-r1.json  model-scheduler-mixed-20260718-r1.json
design-materials-program-concept/: orchestration-summary.json  validation-report.json  素材与节目页-设计确认稿.design
design-workbench-redesign-v1/: orchestration-summary.json  validation-report.json  工作台重构第一版.design
design-workbench-redesign-v1-flow-draft/: orchestration-summary.json  validation-report.json  工作台重构第一版-流程信息流优化稿.design
docs/: README.md  agent-architecture-plan.md  architecture.md  (+18 more)
(+281 files in other folders)
